--- a/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
+++ b/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
@@ -167,7 +167,7 @@
         <scene sceneID="INf-63-HSY">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4pf-qK-ioi" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="공지" image="house.fill" catalog="system" id="arc-Nb-s2q"/>
+                    <tabBarItem key="tabBarItem" title="공지" image="megaphone.fill" catalog="system" id="arc-Nb-s2q"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="FOm-Du-mvD">
                         <rect key="frame" x="0.0" y="44" width="414" height="96"/>
@@ -241,8 +241,8 @@
     </scenes>
     <resources>
         <image name="calendar" catalog="system" width="128" height="106"/>
-        <image name="house.fill" catalog="system" width="128" height="106"/>
         <image name="line.horizontal.3" catalog="system" width="128" height="64"/>
+        <image name="megaphone.fill" catalog="system" width="128" height="114"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <systemColor name="secondarySystemFillColor">
             <color red="0.47058823529411764" green="0.47058823529411764" blue="0.50196078431372548" alpha="0.16" colorSpace="custom" customColorSpace="sRGB"/>
