약간의 수정

--- a/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
+++ b/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
@@ -24,10 +24,10 @@
             </objects>
             <point key="canvasLocation" x="403" y="1594"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Side Menu View Controller-->
         <scene sceneID="2Gt-TD-4F9">
             <objects>
-                <tableViewController id="7zC-2J-7Of" customClass="TableViewController" customModule="GSMFestival" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="7zC-2J-7Of" customClass="SideMenuViewController" customModule="GSMFestival" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="9Dn-pS-31A">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
