--- a/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
+++ b/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
@@ -61,12 +61,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="nCf-yb-TLm"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XWq-Hd-o1U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1378" y="2279"/>
+            <point key="canvasLocation" x="-1378.2608695652175" y="2278.7946428571427"/>
         </scene>
         <!--공지-->
         <scene sceneID="O71-fU-aZX">
