사이드메뉴 작업 중

--- a/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
+++ b/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
@@ -64,7 +64,11 @@
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                     <navigationItem key="navigationItem" id="r1N-OW-Vfv">
-                        <barButtonItem key="leftBarButtonItem" title="Back" id="hej-GO-oC0"/>
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="hej-GO-oC0">
+                            <connections>
+                                <action selector="backBtn:" destination="Alh-Fd-zZe" id="tpD-xr-phd"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XWq-Hd-o1U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -244,7 +248,6 @@
         <!--Navigation Controller-->
         <scene sceneID="Oxs-YR-rLN">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="JKF-Gl-0m9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController storyboardIdentifier="ClassViewController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="zrD-7r-4E0" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="EHQ-S8-qyS">
@@ -256,6 +259,7 @@
                         <segue destination="Alh-Fd-zZe" kind="relationship" relationship="rootViewController" id="tdr-0D-mGF"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JKF-Gl-0m9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1378.2608695652175" y="2278.7946428571427"/>
         </scene>
